SF_CodeBase/objects/talkdesk__Talkdesk_Public__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>talkdesk__Environment_Instance__c</fullName>
        <defaultValue>&quot;Production&quot;</defaultValue>
        <label>Environment Instance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>talkdesk__TimezoneOffset__c</fullName>
        <label>TimezoneOffset</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>talkdesk__Timezone__c</fullName>
        <label>Timezone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Talkdesk Public</label>
</CustomObject>